--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <div class="contentBox nopadd">
         <a href="/login">login</a>
         <a href="/register">register</a>
+        <button id="logout">logout</button>
     </div>
     
     <%- include('./partials/phoneNav.ejs') %>
