--- a/views/student/index.ejs
+++ b/views/student/index.ejs
@@ -9,7 +9,7 @@
 
     <div class="contentBox nopadd">
         <nav class="navigation">
-            <span class="active" dashpage="overview">Account OverView</span>
+            <span class="active" dashpage="overview">OverView</span>
             <span dashpage="meetings" id="meetsBar">Meetings</span>
             <span dashpage="tasks">Tasks</span>
             <span dashpage="Summary">Studying Reports Summary</span>
@@ -234,8 +234,8 @@
                 <h2 class="label is-3 has-text-weight-medium">Tasks you did not finished</h2>
                 
                 <div class="type-selector">
-                    <span class="tag is-medium is-purpleGradedeg" showerData="nviTask">Vocabs & Idioms</span>
-                    <span class="tag is-light is-medium is-purpleGradedeg" showerData="nrecomendations">Recomendations</span>
+                    <span class="tag is-medium is-purpleGradedeg" showerData="nviTask">Vocabularies</span>
+                    <span class="tag is-light is-medium is-purpleGradedeg" showerData="nrecomendations">Grammar</span>
                 </div>
 
                 <div class="column is-6 is-paddingless margintop-10">
@@ -271,8 +271,8 @@
                 <h2 class="label is-3 has-text-weight-medium">Tasks you finished</h2>
 
                 <div class="type-selector">
-                    <span class="tag is-medium is-purpleGradedeg" showerData="viTask">Vocabs & Idioms</span>
-                    <span class="tag is-light is-medium is-purpleGradedeg" showerData="recomendations">Recomendations</span>
+                    <span class="tag is-medium is-purpleGradedeg" showerData="viTask">Vocabularies</span>
+                    <span class="tag is-light is-medium is-purpleGradedeg" showerData="recomendations">Grammar</span>
                 </div>
 
                 <div class="column is-6 is-paddingless margintop-10">
