--- a/views/student/mytasks/vitask.ejs
+++ b/views/student/mytasks/vitask.ejs
@@ -6,7 +6,7 @@
     <div style="display: none" id="pageTitle">dashboard</div>
 
     <nav class="backnav is-flex is-justify-content-space-between is-align-items-center">
-        <p class="is-6 has-text-weight-mediume cus50">Vocabs & Idioms: <span class="is-size-55 has-text-grey-lighter"><%= responseData.taskname %></span></p>
+        <p class="is-6 has-text-weight-mediume cus50">Vocabularies: <span class="is-size-55 has-text-grey-lighter"><%= responseData.taskname %></span></p>
         <a href="/student" class="backto">Back <i class="fa-solid fa-caret-right"></i></a>
     </nav>
     
