--- a/views/teacher/meetings.ejs
+++ b/views/teacher/meetings.ejs
@@ -56,12 +56,10 @@
                             <label class="label has-text-weight-medium cus60">Student</label>
                             <div class="control">
                                 <div class="select is-fullwidth">
-                                    <select name="student" id="students" required>
+                                    <select name="student" id="selectStudent" required>
                                         <option value="la">Level A students</option>
                                         <option value="lb">Level B students</option>
                                         <option value="lc">Level C students</option>
-                                        <option value="h@g.com">h@g.com</option>
-                                        <option value="h4@g.com">h2@g.com</option>
                                     </select>
                                 </div>
                             </div>
