--- a/views/teacher/newtask.ejs
+++ b/views/teacher/newtask.ejs
@@ -39,7 +39,7 @@
                             <input type="radio" id="vocabIdioms" name="task" class="is-hidden" value="vocabIdioms">
                             <label class="column is-half-desktop" for="vocabIdioms">
                                 <div class="selectTask isai">
-                                    <p class="is-size-4 cus80 has-text-centered">Vocabs & Idioms</p>
+                                    <p class="is-size-4 cus80 has-text-centered">Vocabularies</p>
                                     <p class="has-text-weight-medium is-size-6 cus60 has-text-centered">Have the student study some vocabularies & Idioms.</p>
                                 </div>
                             </label> 
@@ -129,7 +129,7 @@
                             <div class="column is-half">
                                 <div class="box">
                                     <div class="field">
-                                        <label class="label has-text-weight-medium cus80">Put Vocabs & Idioms or use <span class="cus60">LingBuddyAI</span> to generate them!</label>
+                                        <label class="label has-text-weight-medium cus80">Put Vocabularies or use <span class="cus60">LingBuddyAI</span> to generate them!</label>
                                         <div class="control">
                                             <textarea class="textarea" id="vitasktextarea" placeholder="Put vocabs/Idioms here or generate with LingBuddyAI"></textarea>
                                         </div>
