--- a/views/teacher/tasks/vitask.ejs
+++ b/views/teacher/tasks/vitask.ejs
@@ -6,7 +6,7 @@
     <div style="display: none" id="pageTitle">dashboard</div>
 
     <nav class="backnav is-flex is-justify-content-space-between is-align-items-center">
-        <p class="is-6 has-text-weight-mediume cus50">Grammar: <span class="is-size-55 has-text-grey-lighter"><%= responseData.taskname %></span></p>
+        <p class="is-6 has-text-weight-mediume cus50">Vocabularies: <span class="is-size-55 has-text-grey-lighter"><%= responseData.taskname %></span></p>
         <a href="/student" class="backto">Back <i class="fa-solid fa-caret-right"></i></a>
     </nav>
     
@@ -16,17 +16,6 @@
                 <p class="subtitle is-5 has-text-weight-mediume">Task Content</p>
                 <div class="txtBox aiTxtBox vocabs"><p id="taskContent"><%- responseData.content.trim() %></p></div>
             </div>
-
-            <% if (responseData.answered === "false") { %>
-                <div>
-                  <label class="is-size-4">
-                    <input type="checkbox" id="taskChecked" fethcplace="/student/mytasks/re/" saveID="<%= responseData._id %>" style="height: 20px; width: 20px;" />
-                    Mark as answered
-                  </label>
-                </div>
-            <% } %>
-    
-            
         </div>
     </div>
     
