fix internal error

--- a/views/student/reports.ejs
+++ b/views/student/reports.ejs
@@ -85,7 +85,7 @@
                                             <p class="is-size-7 longTxt aif"><%= report.aifeedback %></p>
                                         </div>
                                         <div class="is-size-6">Teacher Feedback: 
-                                            <p class="is-size-7 longTxt tef"><%= report.teacherfeedback.length > 0 ? report.teacherfeedback : "-" %></p>
+                                            <p class="is-size-7 longTxt tef"><%= report.teacherfeedback?.length > 0 ? report.teacherfeedback : "-" %></p>
                                         </div>
                                     </div>
                                 </div>
@@ -158,7 +158,7 @@
                                         <p class="aif2"><%= report.aifeedbacks[1] %></span></p>
                                     </div>
                                     <div class="is-size-6">Teacher Feedback: 
-                                        <p class="is-size-7 longTxt tef"><%= report.teacherfeedback.length > 0 ? report.teacherfeedback : "-" %></p>
+                                        <p class="is-size-7 longTxt tef"><%= report.teacherfeedback?.length > 0 ? report.teacherfeedback : "-" %></p>
                                     </div>
                                 </div>
                             </div>
